# audio-tap-tauri-example

./: package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: aggregate_device.rs  ca_tap_description.rs  lib.rs  main.rs
