[package]
name = "app-sandbox-example"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_sandbox_example_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
coreaudio-rs = "0.12.0"
coreaudio-sys = "0.2.15"
objc = "0.2.7"
uuid = "1.8.0"
objc-foundation = "0.1.1"
objc_id = "0.1.1"
core-foundation = "0.9.4"

